--- a/phing/build.xml
+++ b/phing/build.xml
@@ -15,9 +15,6 @@
     </then>
   </if>
 
-  <!-- Load custom property values. -->
-  <property file="${project.basedir}/build.yml" override="true"/>
-
   <!-- Include task partials -->
 
   <!-- Defines a list of default properties, available to all targets. -->
@@ -57,7 +54,7 @@
   <import file="${phing.dir}/tasks/vm.xml"/>
 
   <target name="list" hidden="true">
-    <exec dir="${repo.root}" command="./blt.sh -q -l" passthru="true"/>
+    <exec dir="${blt.root}" command="./blt.sh -q -l" passthru="true"/>
   </target>
 
   <target name="target-hook:invoke" description="Executes a command defined in the target-hooks array.">
