--- a/template/project.yml
+++ b/template/project.yml
@@ -10,6 +10,7 @@ project:
   prefix: 'BLT'
   human_name: 'BLTed 8'
   profile:
+    # You can generate a custom profile by running '../vendor/bin/drupal generate:profile' from the docroot.
     name: 'lightning'
     # Please ensure contrib profiles are also in your composer.json file.
     contrib: true
