--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,9 @@ addons:
 before_install:
   # Decrypt private SSH key id_rsa_blt.enc, save as ~/.ssh/id_rsa_blt.
   - if [[ "$TRAVIS_PULL_REQUEST" == "false" ]]; then openssl aes-256-cbc -K $encrypted_c0b166e924da_key -iv $encrypted_c0b166e924da_iv -in id_rsa_blt.enc -out ~/.ssh/id_rsa -d; chmod 600 ~/.ssh/id_rsa; ls -lash ~/.ssh; eval "$(ssh-agent -s)"; ssh-add ~/.ssh/id_rsa; fi
+  # Enable aliases for non-interactive shell.
+  - shopt -s expand_aliases
+  # Install NVM.
   - nvm install 0.12
   - nvm use 0.12
   - composer selfupdate
@@ -54,26 +57,28 @@ script:
   # Ensure code quality of 'blt' itself.
   - phpcs --standard=./vendor/drupal/coder/coder_sniffer/Drupal/ruleset.xml tests
   # Generate a new 'blted' project.
-  - ./blt.sh configure
+  - cd blt-project
+  - composer install
+  - ./vendor/acquia/blt/blt.sh blt:alias
+  - source ~/.bash_profile
+  - blt init
   # The local.hostname must be set to 127.0.0.1:8888 because we are using drush runserver to run the site on Travis CI.
   - drupal yaml:update:value project.yml project.local.hostname '127.0.0.1:8888'
-  - ./blt.sh create
-  # Move to the target directory.
-  - cd ../blted8
+  - blt configure
   # Call targets in the new 'blted' project.
-  - ./blt.sh ci:build:validate:test -Dcreate_alias=false -Dbehat.run-server=true -Dbehat.launch-phantom=true
+  - blt ci:build:validate:test -Dcreate_alias=false -Dbehat.run-server=true -Dbehat.launch-phantom=true
   # Deploy build artifact.
-  - ./blt.sh deploy:build -Ddeploy.commitMsg="Automated commit by Travis CI for Build ${TRAVIS_BUILD_ID}" -Ddeploy.branch="8.x-build"
+  - blt deploy:build -Ddeploy.commitMsg="Automated commit by Travis CI for Build ${TRAVIS_BUILD_ID}" -Ddeploy.branch="8.x-build"
   # Add Drupal VM config to repo.
-  - ./blt.sh vm:init
+  - blt vm:init
   # Switch back to 'blt' directory
-  - cd ../blt
+  - cd ..
   # Run 'blt' phpunit tests, excluding deploy-push tests.
   - phpunit tests/phpunit --exclude-group deploy-push
 
 deploy:
   provider: script
-  script: ../blted8/blt.sh deploy -Ddeploy.commitMsg="Automated commit by Travis CI for Build ${TRAVIS_BUILD_ID}" -Ddeploy.branch="8.x-build" && phpunit tests/phpunit --group=deploy
+  script: cd blt-project && blt deploy -Ddeploy.commitMsg="Automated commit by Travis CI for Build ${TRAVIS_BUILD_ID}" -Ddeploy.branch="8.x-build" && phpunit tests/phpunit --group=deploy
   skip_cleanup: true
   on:
     branch: 8.x
