--- a/blt-project/composer.json
+++ b/blt-project/composer.json
@@ -4,7 +4,7 @@
     "license": "GPLv2",
     "authors": [
         {
-            "name": "Mattheww Grasmick",
+            "name": "Matthew Grasmick",
             "email": "matthew.grasmick@acquia.com"
         }
     ],
@@ -12,7 +12,7 @@
     "repositories": [
         {
             "type": "vcs",
-            "url": "../"
+            "url": "../../blt"
         }
     ],
     "require": {
