--- a/.travis.yml
+++ b/.travis.yml
@@ -27,10 +27,8 @@ before_install:
   - if [[ "$TRAVIS_PULL_REQUEST" == "false" ]]; then openssl aes-256-cbc -K $encrypted_c0b166e924da_key -iv $encrypted_c0b166e924da_iv -in id_rsa_blt.enc -out ~/.ssh/id_rsa -d; chmod 600 ~/.ssh/id_rsa; ls -lash ~/.ssh; eval "$(ssh-agent -s)"; ssh-add ~/.ssh/id_rsa; fi
   # Enable aliases for non-interactive shell.
   - shopt -s expand_aliases
-  # Install NVM.
-  - nvm install 0.12
-  - nvm use 0.12
   - composer selfupdate
+  # Disable xdebug.
   - phpenv config-rm xdebug.ini
   # Enable $_ENV variables in PHP.
   - echo 'variables_order = "EGPCS"' >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
@@ -41,10 +39,14 @@ before_install:
   - mysql -e 'CREATE DATABASE drupal;'
 
 install:
+  # Load composer dependencies.
   - composer validate --no-check-all --ansi
   - composer install
   - export PATH=$TRAVIS_BUILD_DIR/vendor/bin:$PATH
-  # Initialize drupal consile default configuration.
+  # Install proper version of node for front end tasks.
+  - nvm install 4.4.1
+  - nvm use 4.4.1
+  # Initialize drupal console default configuration.
   - drupal init
 
 before_script:
@@ -61,8 +63,9 @@ script:
   # Generate a new 'blted' project.
   - cd blt-project
   - composer install
-  - ./vendor/acquia/blt/blt.sh blt:alias
-  - source ~/.bash_profile
+  - ./vendor/acquia/blt/blt.sh install-alias
+  - source ~/.bashrc
+  - source ~/.zshrc
   - blt init
   # The local.hostname must be set to 127.0.0.1:8888 because we are using drush runserver to run the site on Travis CI.
   - drupal yaml:update:value project.yml project.local.hostname '127.0.0.1:8888'
