--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ addons:
   - svn-5223.devcloud.hosting.acquia.com
 
 before_install:
+  - ls -lash ~/.composer/cache
   # Decrypt private SSH key id_rsa_blt.enc, save as ~/.ssh/id_rsa_blt.
   - if [[ "$TRAVIS_PULL_REQUEST" == "false" ]]; then openssl aes-256-cbc -K $encrypted_c0b166e924da_key -iv $encrypted_c0b166e924da_iv -in id_rsa_blt.enc -out ~/.ssh/id_rsa -d; chmod 600 ~/.ssh/id_rsa; ls -lash ~/.ssh; eval "$(ssh-agent -s)"; ssh-add ~/.ssh/id_rsa; fi
   # Enable aliases for non-interactive shell.
@@ -39,6 +40,8 @@ before_install:
   - mysql -e 'CREATE DATABASE drupal;'
 
 install:
+  # Remove acquia packages from cache before running `composer install`.
+  - rm -rf vendor/acquia
   # Load composer dependencies.
   - composer validate --no-check-all --ansi
   - composer install
@@ -63,6 +66,9 @@ script:
   # Generate a new 'blted' project.
   - cd blt-project
   - composer install
+  - export PATH=$TRAVIS_BUILD_DIR/blt-project/vendor/bin:$PATH
+  - ls -lash vendor/acquia/blt
+  - cat ./vendor/acquia/blt/blt.sh
   - ./vendor/acquia/blt/blt.sh install-alias
   - source ~/.bashrc
   - source ~/.zshrc
