--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,6 @@
   "autoload": {
     "psr-4": {"Acquia\\Blt\\": "src/"}
   },
-  "minimum-stability": "dev"
+  "minimum-stability": "beta",
+  "prefer-stable": true
 }
