--- a/blt-project/composer.json
+++ b/blt-project/composer.json
@@ -10,12 +10,15 @@
     ],
     "repositories": [
         {
-            "type": "vcs",
-            "url": "../../blt"
+            "type": "path",
+            "url": "../blt",
+            "options": {
+              "symlink": true
+            }
         }
     ],
     "require": {
-        "acquia/blt": "*"
+        "acquia/blt": "*@dev"
     },
     "minimum-stability": "dev",
     "prefer-stable": true
