--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
   "autoload": {
     "psr-4": {"Acquia\\Blt\\": "src/"}
   },
+  "bin": ["bin/blt"],
   "minimum-stability": "beta",
   "prefer-stable": true
 }
