--- a/template/composer.json
+++ b/template/composer.json
@@ -3,12 +3,12 @@
   "license": "proprietary",
   "type":    "project",
   "description": "${project.description}",
-  "repositories": [
-    {
+  "repositories": {
+    "drupal-packagist": {
       "type": "composer",
       "url":  "https://packagist.drupal-composer.org"
     }
-  ],
+  },
   "require": {
     "composer/installers":                        "^1.0.20",
     "cweagans/composer-patches":                  "~1.0",
