--- a/.travis.yml
+++ b/.travis.yml
@@ -67,7 +67,8 @@ script:
   - cp -R blt-project ../
   - cd ../blt-project
   - composer install
-  - export PATH=$TRAVIS_BUILD_DIR/blt-project/vendor/bin:$PATH
+  - ls -lash $TRAVIS_BUILD_DIR/../blt-project/vendor/bin
+  - export PATH=$TRAVIS_BUILD_DIR/../blt-project/vendor/bin:$PATH
   - blt init
   # The local.hostname must be set to 127.0.0.1:8888 because we are using drush runserver to run the site on Travis CI.
   - drupal yaml:update:value project.yml project.local.hostname '127.0.0.1:8888'
