--- a/.travis.yml
+++ b/.travis.yml
@@ -71,9 +71,11 @@ script:
   - ls -lash $TRAVIS_BUILD_DIR/../blt-project/vendor/bin
   - export PATH=$TRAVIS_BUILD_DIR/../blt-project/vendor/bin:$PATH
   - blt init
+  - blt configure
+  # Running `blt init` modified composer.json, so we must update.
+  - composer update
   # The local.hostname must be set to 127.0.0.1:8888 because we are using drush runserver to run the site on Travis CI.
   - drupal yaml:update:value project.yml project.local.hostname '127.0.0.1:8888'
-  - blt configure
   # Call targets in the new 'blted' project.
   - blt ci:build:validate:test -Dcreate_alias=false -Dbehat.run-server=true -Dbehat.launch-phantom=true
   # Deploy build artifact.
