--- a/.travis.yml
+++ b/.travis.yml
@@ -26,8 +26,6 @@ before_install:
   - ls -lash ~/.composer/cache
   # Decrypt private SSH key id_rsa_blt.enc, save as ~/.ssh/id_rsa_blt.
   - if [[ "$TRAVIS_PULL_REQUEST" == "false" ]]; then openssl aes-256-cbc -K $encrypted_c0b166e924da_key -iv $encrypted_c0b166e924da_iv -in id_rsa_blt.enc -out ~/.ssh/id_rsa -d; chmod 600 ~/.ssh/id_rsa; ls -lash ~/.ssh; eval "$(ssh-agent -s)"; ssh-add ~/.ssh/id_rsa; fi
-  # Enable aliases for non-interactive shell.
-  - shopt -s expand_aliases
   - composer selfupdate
   # Disable xdebug.
   - phpenv config-rm xdebug.ini
@@ -63,12 +61,12 @@ script:
   - phpcs --standard=./vendor/drupal/coder/coder_sniffer/Drupal/ruleset.xml tests
   # It is necessary to fetch the full git history in order to use a local composer package in blt-project.
   - git fetch --unshallow
-  # Generate a new 'blted' project.
+  # Generate a new 'blt-project' project.
   - cp -R blt-project ../
   - cd ../blt-project
   - git init
+  # BLT is the only dependency at this point. Install it.
   - composer install
-  - ls -lash $TRAVIS_BUILD_DIR/../blt-project/vendor/bin
   - export PATH=$TRAVIS_BUILD_DIR/../blt-project/vendor/bin:$PATH
   - blt init
   - blt configure
@@ -76,14 +74,14 @@ script:
   - composer update
   # The local.hostname must be set to 127.0.0.1:8888 because we are using drush runserver to run the site on Travis CI.
   - drupal yaml:update:value project.yml project.local.hostname '127.0.0.1:8888'
-  # Call targets in the new 'blted' project.
+  # Call targets in the new 'blt-project' project.
   - blt ci:build:validate:test -Dcreate_alias=false -Dbehat.run-server=true -Dbehat.launch-phantom=true
   # Deploy build artifact.
   - blt deploy:build -Ddeploy.commitMsg="Automated commit by Travis CI for Build ${TRAVIS_BUILD_ID}" -Ddeploy.branch="8.x-build"
   # Add Drupal VM config to repo.
   - blt vm:init
   # Switch back to 'blt' directory.
-  - cd ..
+  - cd ../blt
   # Run 'blt' phpunit tests, excluding deploy-push tests.
   - phpunit tests/phpunit --exclude-group deploy-push
 
