--- a/template/project.yml
+++ b/template/project.yml
@@ -28,6 +28,7 @@ git:
   remotes:
     # Defining git remotes allows builds deployed via CI.
     - bolt8@svn-5223.devcloud.hosting.acquia.com:bolt8.git
+    - bolt8@svn-5223.devcloud.hosting.acquia.com:bolt8.git
 
 drush:
   # You can set custom project aliases in drush/site-aliases/aliases.drushrc.php.
