--- a/template/composer.json
+++ b/template/composer.json
@@ -32,7 +32,7 @@
     "drush/drush":                  "^9.0",
     "drupal/drupal-extension":      "~3.0",
     "drupal/coder":                 "~8.2",
-    "phpunit/phpunit":              "4.6.*",
+    "phpunit/phpunit":             "~5.4",
     "squizlabs/php_codesniffer":    "2.*",
     "phing/phing":                  "dev-master#0ef30e55bb5871cb38903cc0ee9d76074118a22c",
     "jakoch/phantomjs-installer":   "1.9.8",
