--- a/template/composer.json
+++ b/template/composer.json
@@ -43,8 +43,6 @@
       "Drupal\\Tests\\PHPUnit\\": "tests/phpunit/src/"
     }
   },
-  "minimum-stability": "dev",
-  "prefer-stable":     true,
   "extra": {
     "installer-paths": {
       "docroot/core":                     ["type:drupal-core"],
@@ -67,5 +65,7 @@
     "post-update-cmd": [
       "PhantomInstaller\\Installer::installPhantomJS"
     ]
-  }
+  },
+  "minimum-stability": "dev",
+  "prefer-stable":     true
 }
