--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,7 @@
     "autoload": {
         "psr-4": {
             "Acquia\\Blt\\": "src/",
+            "Acquia\\Blt\\RoboPlugin\\":"src/",
             "Acquia\\Blt\\Tests\\": "tests/phpunit/src/",
             "Acquia\\Blt\\Tests\\Robo\\": "tests/phpunit/Robo/"
         }
