--- a/template/composer.json
+++ b/template/composer.json
@@ -20,7 +20,8 @@
         "merge-plugin": {
             "require": [
                 "blt/composer.required.json",
-                "blt/composer.suggested.json"
+                "blt/composer.suggested.json",
+                "blt/dev.required.json"
             ],
             "merge-extra": true,
             "merge-extra-deep": true,
