--- a/scripts/drupal-vm/config.yml
+++ b/scripts/drupal-vm/config.yml
@@ -94,6 +94,9 @@ php_memory_limit: "512M"
 # Acquia Search defaults to 4.5.1.
 solr_version: "4.5.1"
 
+
 post_provision_scripts:
-  - "../../../acquia/blt/scripts/drupal-vm/configure-solr.sh"
+  - "../../../acquia/blt/scripts/drupal-vm/configure-solr4.sh"
   - "../../../acquia/blt/scripts/drupal-vm/post-provision.php"
+
+drush_version: 8.1.15
