--- a/template/composer.json
+++ b/template/composer.json
@@ -20,7 +20,8 @@
         "merge-plugin": {
             "require": [
             "vendor/acquia/blt/composer.required.json",
-            "vendor/acquia/blt/composer.suggested.json"
+            "vendor/acquia/blt/composer.suggested.json",
+            "vendor/acquia-pso/powerplant/composer.required.json"
             ],
             "merge-extra": true,
             "merge-extra-deep": true,
